--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
 /* SELECT SCREEN ============================================================*/
 .header {
   background: #0a0618; /* Old browsers */
@@ -113,6 +119,8 @@
   border: 3px solid #000;
   float: left;
   margin: 0 25px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
 }
 
 .select-screen .main .character.charmander {
@@ -124,10 +132,13 @@
 .select-screen .main .character.squirtle {
   background: #64b2fa;
 }
+.select-screen .main .character:hover {
+  background: #261c53;
+}
 
 /* BATTLE SCREEN ============================================================*/
 #battle-screen {
-  background: url(//i.imgur.com/UZKEjzG.png) no-repeat center center;
+  background: url("http://i.imgur.com/UZKEjzG.png") no-repeat center center;
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
@@ -136,6 +147,13 @@
   padding: 100px 50px;
   overflow: auto;
   height: 100vh;
+  position: relative;
+  top: 0;
+  transition: top 0.5s ease-in-out;
+}
+
+#battle-screen.active {
+  top: -100vh;
 }
 
 #battle-screen .fight-btn {
